examples/test/testpolicy1246.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1246
  namespace: namespace192
spec:
  podSelector:
    matchLabels:
      key5: value23
      key40: value41
      key16: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value47
          key26: value42
          key15: value17
      podSelector:
        matchLabels:
          key47: value25
          key13: value1
